[project]
name = "import-linter"
version = "2.7"
license = {text = "BSD 2-Clause License"}
description = "Enforces rules for the imports within and between Python packages."
authors = [
    {name = "David Seddon", email = "david@seddonym.me"},
]
requires-python = ">=3.10"
dependencies = [
    "click>=6",
    "grimp==3.13",
    "rich>=14.2.0",
    "tomli>=1.2.1; python_version < '3.11'",
    "typing-extensions>=3.10.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]
readme = "README.rst"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/importlinter"]


[project.urls]
Documentation = "https://import-linter.readthedocs.io/"
Source-code = "https://github.com/seddonym/import-linter/"

[project.scripts]
lint-imports = "importlinter.cli:lint_imports_command"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = "README.rst"}

[tool.setuptools.package-data]
importlinter = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 99
exclude = [
    "tests/assets"  # These are sample packages for tests to run under - we don't want ruff to mess with them.
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 99

[tool.mypy]
exclude = [
    '^tests/assets/',
]
warn_unused_ignores = true
warn_redundant_casts = true

[tool.uv.sources]
import-linter = { workspace = true }

[dependency-groups]
dev = [
    "import-linter",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pyupgrade>=3.21.0",
    "pyyaml>=6.0.3",
    "ruff>=0.13.2",
    "tox>=4.30.2",
    "types-pyyaml>=6.0.12.20250915",
]
docs = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]
